fix: remove .html ext from url

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,4 +14,11 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    location / {
+        if ($request_uri ~ ^/(.*)\.html(\?|$)) {
+            return 302 /$1;
+        }
+        try_files $uri $uri.html $uri/ =404;
+    }
 }
