--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     server_name _;
 
+    rewrite ^(/.*)\.html(\?.*)?$ $1$2 permanent;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -14,4 +15,6 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+    
+    try_files $uri.html $uri/ $uri =404;
 }
