fix: html ext fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,6 @@ server {
     listen 80;
     server_name _;
 
-    rewrite ^(/.*)\.html(\?.*)?$ $1$2 permanent;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -13,8 +12,10 @@ server {
 
     # Serve HTML files and handle SPA routing
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri.html $uri/ =404;
+    }
+    location ~* \.html$ {
+    return 301 $scheme://$host$uri;
     }
     
-    try_files $uri.html $uri/ $uri =404;
 }
