--- a/nginx.conf
+++ b/nginx.conf
@@ -14,8 +14,12 @@ server {
     location / {
         try_files $uri $uri.html $uri/ =404;
     }
+    location ~* /index\.html$ {
+        return 301 $scheme://$host/;
+    }
+
     location ~* \.html$ {
-    return 301 $scheme://$host$uri;
+        return 301 $scheme://$host$uri;
     }
     
 }
