fix: wrong redirect request

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,8 @@ server {
         return 301 $scheme://$host/;
     }
 
-    location ~* \.html$ {
-        return 301 $scheme://$host$uri;
+    location ~* ^/(.+)\.html$ {
+        return 301 $scheme://$host/$1;
     }
     
 }
