fix: reverting todays changes

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,14 +12,6 @@ server {
 
     # Serve HTML files and handle SPA routing
     location / {
-        try_files $uri $uri.html $uri/ =404;
+        try_files $uri $uri/ /index.html;
     }
-    location ~* /index\.html$ {
-        return 301 $scheme://$host/;
-    }
-
-    location ~* ^/(.+)\.html$ {
-        return 301 $scheme://$host/$1;
-    }
-    
 }
